WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91927
Fix WebGL texSubImage2D for cube maps
https://bugs.webkit.org/show_bug.cgi?id=91927
Summary
Fix WebGL texSubImage2D for cube maps
Gregg Tavares
Reported
2012-07-21 04:00:31 PDT
Fix WebGL texSubImage2D for cube maps
Attachments
Patch
(18.96 KB, patch)
2012-07-21 04:10 PDT
,
Gregg Tavares
no flags
Details
Formatted Diff
Diff
Patch
(19.14 KB, patch)
2012-07-23 14:29 PDT
,
Gregg Tavares
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Gregg Tavares
Comment 1
2012-07-21 04:10:17 PDT
Created
attachment 153668
[details]
Patch
Kenneth Russell
Comment 2
2012-07-23 11:05:51 PDT
Comment on
attachment 153668
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=153668&action=review
Nice fix. r=me with one comment. Let me know if you want me to cq+ it as is.
> Source/WebCore/html/canvas/WebGLRenderingContext.h:592 > + bool subImage2d);
FYI, there's a preference in WebKit to use local enums instead of boolean arguments to avoid the problem of confusing "true, true, false" call sites. I don't think this is that big a deal here but just something to keep in mind. Here it could be enum { ForTexSubImage2D, NotForTexSubImage2D }.
Gregg Tavares
Comment 3
2012-07-23 14:29:29 PDT
Created
attachment 153861
[details]
Patch
Gregg Tavares
Comment 4
2012-07-23 14:30:15 PDT
changed to use enum instead of bool
Kenneth Russell
Comment 5
2012-07-23 14:54:45 PDT
Comment on
attachment 153861
[details]
Patch Thanks, nice. r=me
WebKit Review Bot
Comment 6
2012-07-23 15:53:44 PDT
Comment on
attachment 153861
[details]
Patch Clearing flags on attachment: 153861 Committed
r123395
: <
http://trac.webkit.org/changeset/123395
>
WebKit Review Bot
Comment 7
2012-07-23 15:53:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug