Fix WebGL texSubImage2D for cube maps https://bugs.webkit.org/show_bug.cgi?id=91927

Patch by Gregg Tavares <gman@google.com> on 2012-07-23
Reviewed by Kenneth Russell.

Source/WebCore:

Fixes texSubImage2D so any size rectangle can be passed in
for cube maps.

Test: fast/canvas/webgl/tex-sub-image-cube-maps.html

* html/canvas/WebGLRenderingContext.cpp:
(WebCore):
(WebCore::WebGLRenderingContext::copyTexImage2D):
(WebCore::WebGLRenderingContext::texImage2DBase):
(WebCore::WebGLRenderingContext::texSubImage2DBase):
(WebCore::WebGLRenderingContext::validateTexFuncParameters):
* html/canvas/WebGLRenderingContext.h:
(WebGLRenderingContext):

LayoutTests:

Tests for WebGL texSubImage2D for cube maps.

* fast/canvas/webgl/tex-sub-image-cube-maps-expected.txt: Added.
* fast/canvas/webgl/tex-sub-image-cube-maps.html: Added.

Canonical link: https://commits.webkit.org/109846@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123395 268f45cc-cd09-0410-ab3c-d52691b4dbfc